--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     </div> 
     <div class="main-bit">
         <center>
-            <div class="link-button"><a href="https://nightly.link/Fedoraware/Fedoraware/workflows/msbuild/main/Fedoraware.zip">Download latest</a></div>
-            <div class="link-button"><a href="https://github.com/tf2cheater2013/Fedoraware">GitHub</a></div>
-            <div class="link-button"><a href="https://discord.com/invite/kFkk2jahak">Discord</a></div>
+            <a class="link-button" href="https://nightly.link/Fedoraware/Fedoraware/workflows/msbuild/main/Fedoraware.zip">Download latest</a>
+            <a class="link-button" href="https://github.com/tf2cheater2013/Fedoraware">GitHub</a>
+            <a class="link-button" href="https://discord.com/invite/kFkk2jahak">Discord</a>
+            
         </center>
         <!--  -->
     </div>
